# omo-debt

./: .coverage  .gitignore  ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE.md  BOUNDARY.md  CALLCHAIN.md  CAPABILITY-MAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  README.zh.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml  test.yml
.omc/state/: last-tool-error.json
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md  MIGRATION.md  README.md  TROUBLESHOOTING.md
src/omo_debt/: __init__.py  __version__.py  cli.py  cli_honesty.py  models.py
src/omo_debt/core/: __init__.py  scoring.py  stage.py
src/omo_debt/honesty/: __init__.py  completeness.py  consistency.py  core.py  verifiability.py
src/omo_debt/legacy/: core.py
tests/unit/: test_honesty.py  test_legacy.py  test_scoring.py  test_stage.py
